--- a/public/src/app/search/search.component.html
+++ b/public/src/app/search/search.component.html
@@ -1,1 +1,71 @@
-<p>search works!</p>
+<!DOCTYPE html>
+<html>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script src="https://apis.google.com/js/client.js?onload=googleApiClientReady"></script>
+<script src="jquery-3.4.1.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
+<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+<body class="p-4">
+  <div class="mx-auto p-0">
+    <div class="row">
+      <div class="col-3">
+      <div class="container"><h3><span style="color: #DC3545">S</span>ongs</h3></div>
+      <div class="card mb-4 shadow-lg" style="background-color: black">
+        <div class="card-header">
+            <form (submit)="myFunction()">
+                <div class="input-group">
+                    <input class="form-control mx-auto d-inline-block" name="query"
+                    [(ngModel)]="search.query" type="text" placeholder="Look for Songs" />
+                    <div class="input-group-append">
+                      <button type="submit" class="btn btn-danger">Find</button>
+                    </div>
+                  </div>
+              </form>
+            <div class="overflow-auto" *ngIf="search.query">
+              <!-- <div id ="results"> -->
+                  <div id ="results1"></div>
+                  <div id ="results2"></div>
+                  <div id ="results3"></div>
+                  <div id ="results4"></div>
+                  <div id ="results5"></div>
+                  <div id ="results6"></div>
+                  <div id ="results7"></div>
+                  <div id ="results8"></div>
+                  <div id ="results9"></div>
+                  <div id ="results10"></div>
+
+              <!-- </div> -->
+                <!-- <div id="results" *ngFor="let result of searchResults">
+                  <p style = "color:white">{{result.snippet.title}}</p>
+                </div> -->
+            </div>
+
+          <!-- <form #form action="http://www.youtube.com/results" method="get" target="_blank">
+            <div class="input-group">
+              <input class="form-control mx-auto d-inline-block" name="search_query" type="text" placeholder="Look for Playlists" />
+              <div class="input-group-append">
+                <button type="submit" class="btn btn-danger" (click)="form.submit()">Find</button>
+              </div>
+            </div>
+          </form> -->
+
+        </div>
+      
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+
+
