--- a/public/src/custom-theme.scss
+++ b/public/src/custom-theme.scss
@@ -12,14 +12,14 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$public-primary: mat-palette($mat-indigo);
-$public-accent: mat-palette($mat-pink, A200, A100, A400);
+$dark-primary: mat-palette($mat-gray, A900);
+$public-accent: mat-palette($mat-light-blue, A500);
 
 // The warn palette is optional (defaults to red).
 $public-warn: mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$public-theme: mat-light-theme($public-primary, $public-accent, $public-warn);
+$public-theme: mat-dark-theme($dark-primary, $public-accent, $public-warn);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
