--- a/public/src/app/playlist/playlist.component.html
+++ b/public/src/app/playlist/playlist.component.html
@@ -1,1 +1,39 @@
-<p>playlist works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>PlayList</title>
+
+
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+    <!-- Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+
+<body>
+    <mat-sidenav-container class="example-container" *ngIf="shouldRun">
+
+        <!-- SideNav Elements here -->
+        <mat-sidenav class="blue-bg" #sidenav mode="side" [(opened)]="opened">
+
+        </mat-sidenav>
+
+        <!-- Main Content Here -->
+        <mat-sidenav-content class="charcoal-bg">
+            <p><button class="sideNavTrigger btn" mat-button (click)="sidenav.toggle()"><i
+                        class=" material-icons">menu</i></button></p>
+
+        </mat-sidenav-content>
+
+    </mat-sidenav-container>
+</body>
+
+</html>
