--- a/public/src/app/search/search.component.html
+++ b/public/src/app/search/search.component.html
@@ -20,9 +20,7 @@
   <div class="mx-auto">
     <div class="row">
       <div class="col-12">
-
-      <div class="container"><h3 style = "color: #00A8E0">Search</h3></div>
-
+      <div class="container"><h3>Songs</h3></div>
       <div class="card mb-4">
         <div class="card-header">
             <form (submit)="myFunction()">
@@ -52,20 +50,6 @@
                   <p style = "color:white">{{result.snippet.title}}</p>
                 </div> -->
             </div>
-
-          <!-- lyrics find implementation -->
-          <div class="insert">
-            <h3>Find lyrics</h3>
-            <form (submit)="lyricsFind()">
-              <div class="form-group">
-                <input type="text" class="form-control music-insert mx-auto" id = "lyricInput" name="artist" placeholder="Artist" [(ngModel)]='lyricSearch.artist'>
-                <input type="text" class="form-control music-insert mx-auto" id = "lyricInput" name="song" placeholder="Song Title" [(ngModel)]='lyricSearch.song'>
-              </div>
-              <button type="submit" class="btn btn-danger">Find lyrics!</button>
-            </form>
-
-
-          </div>
 
           <!-- <form #form action="http://www.youtube.com/results" method="get" target="_blank">
             <div class="input-group">
