--- a/public/src/app/playing/playing.component.html
+++ b/public/src/app/playing/playing.component.html
@@ -42,8 +42,8 @@
                         class=" material-icons">menu</i></button></p>
 
             <!-- Spot for video -->
-            <video style="margin-left: 5.5%;" width="320" height="240" controls>
-                
+            <video id="video" style="margin-left: 5.5%;" width="320" height="240" autoplay>
+                <source *ngIf="chunks.length > 0" [src]="clip">
             </video>
 
             <!-- Div for lyrics -->
