--- a/public/src/app/welcome/welcome.component.html
+++ b/public/src/app/welcome/welcome.component.html
@@ -22,11 +22,11 @@
 <body>
     <div class="container row">
         <header>
-            <h1 class="center blue-f m-top-0">Share-E-oke</h1>
+            
         </header>
 
         <main class="row">
-            <div class="selection col s7 white-bg border-rad blue-border" style="position: relative; padding: 0; left:21.5%;">
+            <div class="selection col s7 white-bg border-rad blue-border" style="position: relative; padding: 0; left:21.5%; margin-top: 35px;">
                 <h5 class="m-top-0 blue-bg center"> Join Party</h5>
                 <form (submit)="joinRoom()" class="row">
                     <div>
@@ -35,6 +35,7 @@
                     <button style="left: 22%;" class="col push-s4 btn waves blue-bg">Enter Room</button>
                 </form>
             </div>
+            <img src="assets/img/shareoke.png" width="335px" height="370px">
         </main>
 
 
