--- a/public/src/app/welcome/welcome.component.html
+++ b/public/src/app/welcome/welcome.component.html
@@ -16,6 +16,7 @@
     <!-- Icons From Materialize -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Format: <i class="material-icons">add</i> -->
+    <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
 
 </head>
 
@@ -34,6 +35,10 @@
                     </div> <br> <br> <br>
                     <button style="left: 22%;" class="col push-s4 btn waves blue-bg">Enter Room</button>
                 </form>
+            </div>
+            <div>
+
+                    <img src="assets/img/shareOk.png" width="300px" height="370px">
             </div>
         </main>
 
