--- a/public/src/app/welcome/welcome.component.html
+++ b/public/src/app/welcome/welcome.component.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <div class="container row">
+    <div class="container row" style = "text-align: center">
         <header>
             
         </header>
@@ -38,7 +38,7 @@
             </div>
             <div>
 
-                    <img src="assets/img/shareOk.png" width="300px" height="370px">
+                    <img src="assets/img/shareoke.png" width="280px" height="320px" style = "margin-top: 7%">
             </div>
 
         </main>
